force-app/main/default/objects/Rippling_Time_Off__c/Rippling_Time_Off__c.object-meta.xml
<CustomObject>
    <label>Rippling Time Off</label>
    <nameField>
        <displayFormat>TO-{0000000}</displayFormat>
        <label>Time Off Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rippling Time Off</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>