force-app/main/default/objects/Rippling_Time_Off__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Last calendar day of the time-off request.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>