force-app/main/default/objects/Rippling_Time_Off__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <description>Precise end timestamp for partial-day time off.</description>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>