force-app/main/default/objects/Rippling_Time_Off__c/fields/Rippling_Time_Off_Id__c.field-meta.xml
<CustomField>
    <fullName>Rippling_Time_Off_Id__c</fullName>
    <description>Unique time-off request identifier from Rippling.</description>
    <externalId>true</externalId>
    <label>Rippling Time Off Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>