force-app/main/default/objects/Rippling_Time_Off__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <defaultValue>&quot;Rippling&quot;</defaultValue>
    <label>Source System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>