force-app/main/default/objects/Rippling_Time_Off__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>First calendar day of the time-off request.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>