force-app/main/default/objects/Rippling_Time_Off__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <description>Precise start timestamp for partial-day time off.</description>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>