force-app/main/default/objects/Rippling_Time_Off__c/fields/Time_Off_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Off_Type__c</fullName>
    <label>Time Off Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>